@@ -1,5 +1,9 @@
 2001-10-25  Sam Steingold  <sds@gnu.org>
 
+	* socket.d (ipv6_ntop): make sure buffer is returned
+
+2001-10-25  Sam Steingold  <sds@gnu.org>
+
 	* stream.d (rd_ch_keyboard) [WIN32_NATIVE !UNICODE]: fixed the
 	call to OemToCharBuff()
 	Suggested by Arseny Slobodjuck <ampy@ich.dvo.ru>
